fix: Fix rich text editor spacing

--- a/src/renderer/app.global.css
+++ b/src/renderer/app.global.css
@@ -11,3 +11,8 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
+
+.public-DraftStyleDefault-block {
+  margin-top: 0;
+  margin-bottom: 0;
+}
